# BasistechniekenComputerSimulaties

./: README.md
Hoofdstuk2/: methodeVanDeKoorde.py  methodeVanDeVasteRichting.py  methodeVanNewton.py  oplossingDoorDichotomie.py  regulaFalsi.py
hoofdstuk2/methode-koorde/: Cargo.toml
hoofdstuk2/methode-koorde/src/: main.rs
hoofdstuk2/methode-vaste-richting/: Cargo.toml
hoofdstuk2/methode-vaste-richting/src/: main.rs
hoofdstuk2/newton/: Cargo.toml
hoofdstuk2/newton/src/: main.rs
