[package]
name = "newton"
version = "0.1.0"
authors = ["SamClercky <sam.clercky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
